[gd_scene load_steps=67 format=3 uid="uid://8nccul0njthp"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_7vfew"]
[ext_resource type="Texture2D" uid="uid://dlbr8ocq67w0n" path="res://Art/mystic_woods_free_2.1/sprites/characters/player.png" id="2_4gu8u"]
[ext_resource type="Script" path="res://scripts/Melee_Attack.gd" id="4_4bcrn"]
[ext_resource type="Texture2D" uid="uid://bocgji2ksdvi7" path="res://Art/arrow3.png" id="4_ggp2n"]
[ext_resource type="AudioStream" uid="uid://df1hbj2ixauoy" path="res://sounds/mixkit-air-whistle-punch-2048.wav" id="5_8k2gg"]
[ext_resource type="AudioStream" uid="uid://clqw0lbu1yjq" path="res://sounds/mixkit-game-gun-shot-1662.mp3" id="6_goojn"]
[ext_resource type="Texture2D" uid="uid://6xrrhscf1t0n" path="res://Art/banana.png" id="7_c0n8p"]
[ext_resource type="PackedScene" uid="uid://b4vr0lkgej7km" path="res://Scenes/poisonEffect.tscn" id="7_ctxwb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wu43k"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lowfo"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmogx"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ralo"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky6m6"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rcak"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vqtl"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3hhm"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_autho"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmpgu"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpexx"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhko6"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bopue"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ijui"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrn4y"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsc3"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx5pe"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4fi6"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a0de"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qkh1"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cltp"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgu7l"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4gw8"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve74d"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3xvm"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnhdq"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gexx5"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnpqy"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chclr"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mu5p"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f18gk"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_geohr"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5aj5"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3giqh"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h435e"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xog4e"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2i0w"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwauf"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwvxk"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd1cl"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0s22"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcq5a"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjq7n"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wthi"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoid2"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gghb"]
atlas = ExtResource("2_4gu8u")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cg0y"]
atlas = ExtResource("2_4gu8u")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_05i7e"]
atlas = ExtResource("2_4gu8u")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_00vff"]
atlas = ExtResource("2_4gu8u")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvdrv"]
atlas = ExtResource("2_4gu8u")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpvjw"]
atlas = ExtResource("2_4gu8u")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_uh3uc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu43k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lowfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmogx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ralo")
}],
"loop": true,
"name": &"back_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky6m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rcak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vqtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3hhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_autho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmpgu")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpexx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhko6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bopue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ijui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrn4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsc3")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx5pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4fi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a0de")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qkh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cltp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgu7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4gw8")
}],
"loop": true,
"name": &"front_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve74d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3xvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnhdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gexx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnpqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chclr")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mu5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f18gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geohr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5aj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3giqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h435e")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xog4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2i0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwauf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwvxk")
}],
"loop": true,
"name": &"side_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd1cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0s22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcq5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjq7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wthi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoid2")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cg0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05i7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00vff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpvjw")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_855eh"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pywir"]
radius = 95.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4x7yq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eawrm"]
size = Vector2(15.3125, 21.2454)

[sub_resource type="CircleShape2D" id="CircleShape2D_i84gw"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o0d5n"]
radius = 11.0454

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
script = ExtResource("1_7vfew")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uh3uc")
animation = &"death"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_855eh")

[node name="Big_Attack" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2(0, -4)
collision_mask = 3

[node name="deal_attack_timer" type="Timer" parent="Big_Attack"]
wait_time = 0.2

[node name="Radius_Collision" type="CollisionShape2D" parent="Big_Attack" groups=["hitbox"]]
position = Vector2(0, 4)
scale = Vector2(1, 1.01475)
shape = SubResource("CircleShape2D_pywir")
debug_color = Color(0, 0.6, 0.701961, 0.627451)

[node name="player_hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_4x7yq")

[node name="Melee_Attack" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2(0, -2)
collision_mask = 3
script = ExtResource("4_4bcrn")

[node name="Melee_Collision" type="CollisionShape2D" parent="Melee_Attack" groups=["hitbox"]]
position = Vector2(0, 14.2206)
scale = Vector2(1, 1.01475)
shape = SubResource("RectangleShape2D_eawrm")
debug_color = Color(0, 0.6, 0.701961, 0.627451)

[node name="Arrow" type="TextureRect" parent="Melee_Attack"]
offset_left = -8.0
offset_top = 1.0
offset_right = 8.0
offset_bottom = 15.0
texture = ExtResource("4_ggp2n")
expand_mode = 3
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Attract" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attract"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_i84gw")

[node name="Enemy_Attack" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Attack"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_o0d5n")

[node name="ProjectileDirection" type="Node2D" parent="."]
position = Vector2(0, -6)

[node name="Marker2D" type="Marker2D" parent="ProjectileDirection"]

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="poison_timer" type="Timer" parent="."]

[node name="dash_again_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8k2gg")
volume_db = -5.0

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_goojn")
volume_db = -10.0

[node name="PoisonEffect" parent="." instance=ExtResource("7_ctxwb")]

[node name="PoisonDoneTimer" type="Timer" parent="."]

[node name="AbilityTimer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
texture_filter = 3
position = Vector2(-1, 0)
emitting = false
amount = 100
lifetime = 5.0
speed_scale = 0.1
explosiveness = 0.8
randomness = 1.0
local_coords = true
texture = ExtResource("7_c0n8p")
emission_shape = 1
emission_sphere_radius = 70.0
gravity = Vector2(0, 0)
initial_velocity_max = 1.5
angular_velocity_min = -40.0
angular_velocity_max = 40.0
orbit_velocity_min = 10.0
orbit_velocity_max = 13.0
tangential_accel_max = 4.25
scale_amount_min = 0.1
scale_amount_max = 0.1
color = Color(0.91, 0.849333, 0, 1)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Big_Attack" to="." method="_on_big_attack_body_entered"]
[connection signal="body_exited" from="Big_Attack" to="." method="_on_melee_attack_body_exited"]
[connection signal="timeout" from="Big_Attack/deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="body_entered" from="Melee_Attack" to="." method="_on_melee_attack_body_entered"]
[connection signal="body_exited" from="Melee_Attack" to="." method="_on_melee_attack_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Attract" to="." method="_on_attract_body_entered"]
[connection signal="body_exited" from="Attract" to="." method="_on_attract_body_exited"]
[connection signal="body_entered" from="Enemy_Attack" to="." method="_on_enemy_attack_body_entered"]
[connection signal="body_exited" from="Enemy_Attack" to="." method="_on_enemy_attack_body_exited"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="poison_timer" to="." method="_on_poison_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
[connection signal="timeout" from="PoisonDoneTimer" to="." method="_on_poison_done_timer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_ability_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
